ajout contenu des pages et page contact

--- a/GGDemo/src/app/agence-de-voyages/agence-de-voyages.component.html
+++ b/GGDemo/src/app/agence-de-voyages/agence-de-voyages.component.html
@@ -1,8 +1,59 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette Agence de voyages.png" alt="" />
+    <ul>
+      <li>
+        <h2>Enrichissement des Offres de Voyage :</h2>
+        <p>
+          Proposer des voyages uniques et mémorables qui se démarquent dans un
+          marché concurrentiel.
+        </p>
+      </li>
+      <li>
+        <h2>Personnalisation des Itinéraires :</h2>
+        <p>
+          Adapter les voyages aux préférences individuelles de chaque client.
+        </p>
+      </li>
+      <li>
+        <h2>Amélioration de l'Expérience Client :</h2>
+        <p>
+          Assurer une satisfaction client élevée avant, pendant, et après le
+          voyage.
+        </p>
+      </li>
+      <li>
+        <h2>Accès à des Informations et Offres Exclusives :</h2>
+        <p>
+          Accéder à des informations à jour et à des offres exclusives pour
+          enrichir les voyages.
+        </p>
+      </li>
+      <li>
+        <h2>Soutien à la Durabilité:</h2>
+        <p>
+          Répondre à la demande croissante pour des voyages responsables et
+          durables.
+        </p>
+      </li>
+      <li>
+        <h2>Optimisation des Opérations :</h2>
+        <p>Simplifier les opérations et réduire les coûts.</p>
+      </li>
+      <li>
+        <h2>Développement de Partenariats Locaux :</h2>
+        <p>
+          Établir des partenariats locaux pour offrir des expériences
+          authentiques.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
