--- a/GGDemo/src/app/cafe-bar/cafe-bar.component.html
+++ b/GGDemo/src/app/cafe-bar/cafe-bar.component.html
@@ -1,8 +1,62 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette Café-Bar.png" alt="" />
+    <ul>
+      <li>
+        <h2>
+          Augmentation de la Visibilité et Attraction de Nouveaux Clients :
+        </h2>
+        <p>
+          Difficulté à se démarquer dans un environnement urbain saturé et à
+          attirer de nouveaux clients.
+        </p>
+      </li>
+      <li>
+        <h2>Fidélisation de la Clientèle :</h2>
+        <p>
+          Créer une base de clients fidèles dans un marché où les consommateurs
+          sont constamment à la recherche de nouvelles expériences.
+        </p>
+      </li>
+      <li>
+        <h2>Gestion des Avis et de la Réputation en Ligne :</h2>
+        <p>
+          Gérer efficacement les avis en ligne et maintenir une réputation
+          positive.
+        </p>
+      </li>
+      <li>
+        <h2>Optimisation de l'Expérience Client:</h2>
+        <p>Offrir une expérience client mémorable et personnalisée.</p>
+      </li>
+      <li>
+        <h2>Promotion d'Événements et d'Activités Spéciales:</h2>
+        <p>
+          Communiquer efficacement sur les événements spéciaux, les soirées à
+          thème, ou les dégustations organisées par l'établissement.
+        </p>
+      </li>
+      <li>
+        <h2>Analyse des Tendances de Consommation :</h2>
+        <p>
+          Comprendre les préférences et les comportements des clients pour mieux
+          adapter l'offre.
+        </p>
+      </li>
+      <li>
+        <h2>Communication Directe avec les Clients :</h2>
+        <p>
+          Maintenir une communication fluide et directe avec les clients pour
+          les informer des évènements.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
