--- a/GGDemo/src/app/camping/camping.component.html
+++ b/GGDemo/src/app/camping/camping.component.html
@@ -1,8 +1,59 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Camping.png" alt="" />
+    <ul>
+      <li>
+        <h2>Augmentation de la Visibilité et des Réservations :</h2>
+        <p>
+          Difficulté à attirer de nouveaux visiteurs et à augmenter les
+          réservations en dehors des pics saisonniers.
+        </p>
+      </li>
+      <li>
+        <h2>Amélioration de l'Expérience Client :</h2>
+        <p>
+          Fournir une expérience mémorable et personnalisée pour chaque campeur.
+        </p>
+      </li>
+      <li>
+        <h2>Gestion des Avis et du Feedback Client :</h2>
+        <p>
+          Collecter et gérer les avis des clients de manière efficace pour
+          améliorer la réputation en ligne.
+        </p>
+      </li>
+      <li>
+        <h2>Promotion des Activités Locales et des Partenariats :</h2>
+        <p>
+          Mettre en lumière les activités locales et les partenariats avec
+          d'autres prestataires touristiques.
+        </p>
+      </li>
+      <li>
+        <h2>Communication Directe avec les Campeurs :</h2>
+        <p>
+          Maintenir une communication fluide et informative avec les campeurs
+          avant, pendant, et après leur séjour.
+        </p>
+      </li>
+      <li>
+        <h2>Soutien à la Durabilité :</h2>
+        <p>Promouvoir et intégrer des pratiques de camping durable.</p>
+      </li>
+      <li>
+        <h2>Optimisation de l'Occupation et des Revenus :</h2>
+        <p>
+          Maximiser l'occupation et les revenus, surtout pendant les périodes
+          creuses.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
