--- a/GGDemo/src/app/club-sportif/club-sportif.component.html
+++ b/GGDemo/src/app/club-sportif/club-sportif.component.html
@@ -1,8 +1,58 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Club_sportif.png" alt="" />
+    <ul>
+      <li>
+        <h2>
+          Augmentation de la Visibilité et de l'Engagement des Supporters :
+        </h2>
+        <p>
+          Améliorer la visibilité du club sportif et engager activement les
+          supporters locaux et à distance.
+        </p>
+      </li>
+      <li>
+        <h2>Promotion des Événements et Billetterie :</h2>
+        <p>
+          Faciliter la promotion des événements sportifs et la gestion de la
+          billetterie de manière efficace.
+        </p>
+      </li>
+      <li>
+        <h2>Valorisation des Sponsors :</h2>
+        <p>
+          Offrir une visibilité et une valorisation maximales aux sponsors du
+          club, essentielles pour maintenir et attirer le financement.
+        </p>
+      </li>
+      <li>
+        <h2>Fidélisation et Communauté :</h2>
+        <p>
+          Construire et maintenir une communauté de supporters fidèles autour du
+          club sportif.
+        </p>
+      </li>
+      <li>
+        <h2>Communication Directe avec les Supporters :</h2>
+        <p>
+          Maintenir une communication fluide et directe avec les supporters pour
+          les tenir informés des dernières nouvelles et événements.
+        </p>
+      </li>
+      <li>
+        <h2>Analyse et Feedback :</h2>
+        <p>
+          Comprendre les préférences et les attentes des supporters pour
+          améliorer l'offre du club.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
