--- a/GGDemo/src/app/hotel/hotel.component.html
+++ b/GGDemo/src/app/hotel/hotel.component.html
@@ -1,8 +1,74 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Hotel.png" alt="" />
+    <ul>
+      <li>
+        <h2>Amélioration de l'Expérience Client :</h2>
+        <p>
+          Les hôtels cherchent constamment à enrichir l'expérience de leurs
+          clients pour augmenter la satisfaction et encourager les retours.
+        </p>
+      </li>
+      <li>
+        <h2>Augmentation de la Visibilité :</h2>
+        <p>
+          Dans un marché concurrentiel, les hôtels doivent se démarquer et
+          attirer de nouveaux clients.
+        </p>
+      </li>
+      <li>
+        <h2>Optimisation du Taux d'Occupation :</h2>
+        <p>Maximiser le taux d'occupation est crucial pour la rentabilité.</p>
+      </li>
+      <li>
+        <h2>Fidélisation de la Clientèle :</h2>
+        <p>
+          Construire une base de clients fidèles dans un environnement
+          compétitif.
+        </p>
+      </li>
+      <li>
+        <h2>Gestion des Avis et Réputation en Ligne :</h2>
+        <p>
+          Les avis en ligne ont un impact significatif sur les décisions de
+          réservation.
+        </p>
+      </li>
+      <li>
+        <h2>Intégration des Technologies Numériques :</h2>
+        <p>
+          Nécessité d'intégrer des solutions numériques hors de prix pour
+          répondre aux attentes modernes des clients.
+        </p>
+      </li>
+      <li>
+        <h2>Développement Durable et Responsabilité Sociale :</h2>
+        <p>
+          Les consommateurs sont de plus en plus soucieux de l'environnement et
+          du développement durable.
+        </p>
+      </li>
+      <li>
+        <h2>Analyse des Données et Insights :</h2>
+        <p>
+          Comprendre les préférences et le comportement des clients pour mieux
+          servir leurs besoins.
+        </p>
+      </li>
+      <li>
+        <h2>Harmonisation et transmission de l'Information au Client :</h2>
+        <p>
+          Harmoniser et formaliser le niveau d’information touristique délivré
+          par le desk de réception auprès des clients.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
