--- a/GGDemo/src/app/magasin/magasin.component.html
+++ b/GGDemo/src/app/magasin/magasin.component.html
@@ -1,8 +1,63 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Magasins.png" alt="" />
+    <ul>
+      <li>
+        <h2>Augmentation de la Visibilité de la Marque :</h2>
+        <p>Difficulté à se démarquer dans un marché encombré.</p>
+      </li>
+      <li>
+        <h2>Connexion avec une Audience Ciblée :</h2>
+        <p>
+          Atteindre efficacement les consommateurs locaux et les touristes
+          intéressés.
+        </p>
+      </li>
+      <li>
+        <h2>Amélioration de l'Expérience Client :</h2>
+        <p>
+          Créer des expériences mémorables et personnalisées pour les clients.
+        </p>
+      </li>
+      <li>
+        <h2>Intégration de Solutions Numériques :</h2>
+        <p>
+          Digitaliser à coût maitrisé l'offre de la marque pour répondre aux
+          dernières attentes des consommateurs.
+        </p>
+      </li>
+      <li>
+        <h2>Analyse et Feedback en Temps Réel :</h2>
+        <p>Comprendre les préférences et le comportement des clients.</p>
+      </li>
+      <li>
+        <h2>Développement Durable et Responsabilité Sociale :</h2>
+        <p>
+          Aligner les pratiques commerciales avec les valeurs de durabilité et
+          de responsabilité sociale.
+        </p>
+      </li>
+      <li>
+        <h2>Expansion sur de Nouveaux Marchés :</h2>
+        <p>
+          Explorer et s'établir efficacement dans de nouveaux marchés locaux ou
+          touristiques.
+        </p>
+      </li>
+      <li>
+        <h2>Optimisation du "Drive to Store" :</h2>
+        <p>
+          Réduire le taux de perte de clients entre l'intérêt et l'action de
+          visite en magasin.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
