--- a/GGDemo/src/app/mairie/mairie.component.html
+++ b/GGDemo/src/app/mairie/mairie.component.html
@@ -1,8 +1,60 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Mairie.png" alt="" />
+    <ul>
+      <li>
+        <h2>Intégration des Nouveaux Arrivants :</h2>
+        <p>
+          Faciliter l'intégration des nouveaux résidents en leur fournissant des
+          informations essentielles sur la ville et en les aidant à découvrir
+          les services locaux.
+        </p>
+      </li>
+      <li>
+        <h2>Promotion du Tourisme Local :</h2>
+        <p>
+          Augmenter la visibilité des attractions touristiques, des événements
+          culturels, et des commerces locaux auprès des visiteurs et des
+          résidents.
+        </p>
+      </li>
+      <li>
+        <h2>Communication Efficace avec les Citoyens :</h2>
+        <p>
+          Maintenir une communication fluide et directe avec les citoyens pour
+          les informer des nouveautés, des changements de services, et des
+          alertes importantes.
+        </p>
+      </li>
+      <li>
+        <h2>Gestion des Services Urbains :</h2>
+        <p>
+          Informer les résidents sur la localisation des services urbains
+          essentiels, comme les containers à poubelles, les stations de
+          recyclage, ou les bureaux administratifs.
+        </p>
+      </li>
+      <li>
+        <h2>Soutien aux Commerces Locaux :</h2>
+        <p>
+          Dynamiser l'économie locale en soutenant les commerces, artisans, et
+          producteurs locaux.
+        </p>
+      </li>
+      <li>
+        <h2>Valorisation du Patrimoine et de la Culture Locale :</h2>
+        <p>
+          Présenter et valoriser le patrimoine culturel, historique, et naturel
+          de la commune.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
