--- a/GGDemo/src/app/media-presse/media-presse.component.html
+++ b/GGDemo/src/app/media-presse/media-presse.component.html
@@ -1,8 +1,58 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Média-Presse.png" alt="" />
+    <ul>
+      <li>
+        <h2>Augmentation de la Portée et de l'Engagement des Lecteurs :</h2>
+        <p>
+          Attirer de nouveaux lecteurs et augmenter l'engagement sur les
+          plateformes numériques, en particulier lors d'événements locaux ou
+          sportifs.
+        </p>
+      </li>
+      <li>
+        <h2>Contenu Localisé et Personnalisé :</h2>
+        <p>
+          Fournir du contenu pertinent et localisé qui résonne avec les intérêts
+          spécifiques des lecteurs dans différentes régions.
+        </p>
+      </li>
+      <li>
+        <h2>Intégration de Contenus Multilingues :</h2>
+        <p>
+          Atteindre une audience plus large en proposant du contenu dans
+          plusieurs langues, en particulier dans des régions multilingues ou
+          pour des événements internationaux.
+        </p>
+      </li>
+      <li>
+        <h2>Utilisation de Technologies dernière génération :</h2>
+        <p>
+          Intégrer des technologies pour enrichir l'expérience de lecture et
+          offrir des fonctionnalités interactives.
+        </p>
+      </li>
+      <li>
+        <h2>Promotion Croisée et Partenariats:</h2>
+        <p>
+          Établir des partenariats stratégiques avec des plateformes et des
+          événements pour augmenter la visibilité du contenu.
+        </p>
+      </li>
+      <li>
+        <h2>Analyse de l'Audience et du Comportement des Lecteurs:</h2>
+        <p>
+          Comprendre le comportement des lecteurs et leurs préférences pour
+          optimiser le contenu et la stratégie de distribution.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
