--- a/GGDemo/src/app/nav-component/nav-component.component.html
+++ b/GGDemo/src/app/nav-component/nav-component.component.html
@@ -30,5 +30,6 @@
     <a routerLink="/transport-de-personnes" routerLinkActive="active"
       >Transport de personnes</a
     >
+    <a routerLink="/contact" routerLinkActive="active">Nous contacter</a>
   </div>
 </div>
