--- a/GGDemo/src/app/office-de-tourisme/office-de-tourisme.component.html
+++ b/GGDemo/src/app/office-de-tourisme/office-de-tourisme.component.html
@@ -1,8 +1,48 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Office_de_tourisme.png" alt="" />
+    <ul>
+      <li>
+        <h2>Accès aux informations locales Permanent et Multilingue :</h2>
+        <p>
+          Difficulté pour les touristes d’obtenir une infomation 24/24 dans sa
+          langue.
+        </p>
+      </li>
+      <li>
+        <h2>Promotion des Attractions Locales :</h2>
+        <p>
+          Mettre en avant l'ensemble des attractions, y compris les plus
+          confidentielles.
+        </p>
+      </li>
+      <li>
+        <h2>Personnalisation de l'Expérience Touristique :</h2>
+        <p>Proposer une visite sur mesure à chaque touriste.</p>
+      </li>
+      <li>
+        <h2>Dynamisation de l'Économie Locale :</h2>
+        <p>Orienter les touristes vers le commerce local.</p>
+      </li>
+      <li>
+        <h2>Collecte et Analyse de Données Touristiques :</h2>
+        <p>Manquer de données précises sur les touristes.</p>
+      </li>
+      <li>
+        <h2>Communication et Marketing Ciblé :</h2>
+        <p>Communiquer de manière efficace avec les touristes.</p>
+      </li>
+      <li>
+        <h2>Soutien à la Durabilité et au Tourisme Responsable :</h2>
+        <p>Encourager un tourisme respectueux.</p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
