--- a/GGDemo/src/app/producteur-eleveur/producteur-eleveur.component.html
+++ b/GGDemo/src/app/producteur-eleveur/producteur-eleveur.component.html
@@ -1,8 +1,76 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Producteur-Eleveur.png" alt="" />
+    <ul>
+      <li>
+        <h2>Augmentation de la Visibilité et Accès au Marché Local :</h2>
+        <p>
+          Les producteurs et éleveurs peinent souvent à atteindre un large
+          public local et à se démarquer dans un marché concurrentiel.
+        </p>
+      </li>
+      <li>
+        <h2>Valorisation de la Production Locale et Durable :</h2>
+        <p>
+          Les producteurs et éleveurs peinent souvent à atteindre un large
+          public local et à se démarquer dans un marché concurrentiel.
+        </p>
+      </li>
+      <li>
+        <h2>Connexion Directe avec les Consommateurs et les Restaurants :</h2>
+        <p>
+          Manque de canaux directs pour vendre leurs produits sans passer par
+          des intermédiaires qui réduisent les marges bénéficiaires.
+        </p>
+      </li>
+      <li>
+        <h2>Transparence et Traçabilité :</h2>
+        <p>
+          Les consommateurs demandent de plus en plus de transparence et de
+          traçabilité concernant l'origine et les méthodes de production des
+          aliments qu'ils consomment.
+        </p>
+      </li>
+      <li>
+        <h2>Marketing et Promotion :</h2>
+        <p>
+          Manque de ressources ou de connaissances en marketing pour promouvoir
+          efficacement leurs produits.
+        </p>
+      </li>
+      <li>
+        <h2>Feedback et Amélioration Continue :</h2>
+        <p>
+          Difficulté à obtenir des retours constructifs des consommateurs pour
+          améliorer les produits et les offres.
+        </p>
+      </li>
+      <li>
+        <h2>Promotion des Ventes à la Ferme :</h2>
+        <p>
+          Les producteurs et éleveurs cherchent à augmenter les ventes directes
+          à la ferme mais rencontrent des difficultés à attirer les
+          consommateurs locaux et les touristes vers leurs exploitations.
+        </p>
+      </li>
+      <li>
+        <h2>
+          Visibilité des distributeurs automatiques de Produits Fermiers :
+        </h2>
+        <p>
+          Avec l'augmentation de la popularité des distributeurs automatiques
+          pour la viande sous vide et les légumes, les producteurs ont besoin
+          d'un moyen efficace pour faire connaître ces points de vente
+          innovants.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
