--- a/GGDemo/src/app/receptif/receptif.component.html
+++ b/GGDemo/src/app/receptif/receptif.component.html
@@ -1,8 +1,64 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Réceptif.png" alt="" />
+    <ul>
+      <li>
+        <h2>Personnalisation des Expériences Touristiques :</h2>
+        <p>
+          Offrir des expériences uniques et personnalisées qui répondent aux
+          attentes spécifiques de chaque client ou groupe.
+        </p>
+      </li>
+      <li>
+        <h2>Accès à des Offres Locales Authentiques :</h2>
+        <p>
+          Trouver et intégrer des expériences locales authentiques qui sortent
+          des sentiers battus pour enrichir les offres de voyage.
+        </p>
+      </li>
+      <li>
+        <h2>Optimisation de l'Itinéraire :</h2>
+        <p>
+          Créer des itinéraires optimisés qui maximisent l'expérience du client
+          tout en tenant compte des contraintes logistiques.
+        </p>
+      </li>
+      <li>
+        <h2>Communication et Coordination :</h2>
+        <p>
+          Maintenir une communication fluide et coordonner efficacement les
+          détails du voyage avec les clients et les prestataires de services
+          locaux.
+        </p>
+      </li>
+      <li>
+        <h2>Valorisation de la Durabilité :</h2>
+        <p>
+          Intégrer et promouvoir des pratiques de tourisme durable dans les
+          offres proposées aux clients.
+        </p>
+      </li>
+      <li>
+        <h2>Analyse et Feedback :</h2>
+        <p>
+          Collecter et analyser les retours d'expérience des clients pour
+          améliorer continuellement l'offre de services.
+        </p>
+      </li>
+      <li>
+        <h2>Gestion des Disponibilités et des Tarifs :</h2>
+        <p>
+          Adapter rapidement les offres en fonction des disponibilités et des
+          tarifs fluctuants des prestataires locaux.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
