--- a/GGDemo/src/app/restaurant/restaurant.component.html
+++ b/GGDemo/src/app/restaurant/restaurant.component.html
@@ -1,8 +1,82 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Restaurant.png" alt="" />
+    <ul>
+      <li>
+        <h2>
+          Augmentation de la Visibilité et Attraction de Nouveaux Clients :
+        </h2>
+        <p>
+          Difficulté à se démarquer parmi la multitude d'options de restauration
+          et à attirer de nouveaux clients.
+        </p>
+      </li>
+      <li>
+        <h2>Fidélisation de la Clientèle :</h2>
+        <p>
+          Créer une base de clients fidèles dans un secteur où les préférences
+          des consommateurs changent rapidement.
+        </p>
+      </li>
+      <li>
+        <h2>Gestion des Réservations et de l'Occupation :</h2>
+        <p>
+          Optimiser la gestion des réservations pour maximiser l'occupation tout
+          en minimisant les temps d'attente pour les clients.
+        </p>
+      </li>
+      <li>
+        <h2>Amélioration de l'Expérience Client :</h2>
+        <p>
+          Offrir une expérience culinaire mémorable et personnalisée qui dépasse
+          les attentes des clients.
+        </p>
+      </li>
+      <li>
+        <h2>Promotion d'Événements Spéciaux et de Menus Saisonniers :</h2>
+        <p>
+          Communiquer efficacement sur les événements spéciaux, les menus
+          saisonniers, ou les offres à durée limitée.
+        </p>
+      </li>
+      <li>
+        <h2>Collecte et Gestion des Avis Clients :</h2>
+        <p>
+          Collecter et gérer les avis des clients de manière constructive pour
+          améliorer la réputation en ligne du restaurant.
+        </p>
+      </li>
+      <li>
+        <h2>Analyse des Préférences et Comportements des Clients :</h2>
+        <p>
+          Comprendre les tendances de consommation et les préférences des
+          clients pour mieux adapter l'offre culinaire.
+        </p>
+      </li>
+      <li>
+        <h2>Transparence et Traçabilité sur l'Origine des Produits :</h2>
+        <p>
+          Les consommateurs sont de plus en plus soucieux de la qualité et de
+          l'origine des produits qu'ils consomment, notamment en ce qui concerne
+          les légumes et les viandes.
+        </p>
+      </li>
+      <li>
+        <h2>Restauration des marges :</h2>
+        <p>
+          Les restaurants qui disposent déjà de leur propre système de
+          réservation en ligne cherchent à éviter les commissions
+          supplémentaires tout en maximisant leur visibilité et leurs
+          réservations.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
