--- a/GGDemo/src/app/transport-de-personnes/transport-de-personnes.component.html
+++ b/GGDemo/src/app/transport-de-personnes/transport-de-personnes.component.html
@@ -1,8 +1,63 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Transport_de_personnes.png" alt="" />
+    <ul>
+      <li>
+        <h2>Stimulation de l'Envie de Voyager :</h2>
+        <p>
+          Susciter l'intérêt et l'envie de voyager parmi les clients potentiels
+          dans un marché concurrentiel.
+        </p>
+      </li>
+      <li>
+        <h2>Personnalisation de l'Expérience de Voyage :</h2>
+        <p>
+          Offrir une expérience de voyage personnalisée et mémorable pour se
+          démarquer des concurrents.
+        </p>
+      </li>
+      <li>
+        <h2>Promotion des Services et Offres Spéciales :</h2>
+        <p>
+          Communiquer efficacement sur les services, les promotions, et les
+          offres spéciales pour augmenter les réservations.
+        </p>
+      </li>
+      <li>
+        <h2>Amélioration de la Satisfaction Client :</h2>
+        <p>
+          Assurer la satisfaction et le confort des clients tout au long de leur
+          voyage.
+        </p>
+      </li>
+      <li>
+        <h2>Facilitation des Informations de Voyage :</h2>
+        <p>
+          Fournir aux voyageurs toutes les informations nécessaires pour leur
+          voyage de manière concise et accessible.
+        </p>
+      </li>
+      <li>
+        <h2>Renforcement des Partenariats Locaux :</h2>
+        <p>
+          Valoriser les partenariats avec les acteurs locaux des destinations
+          desservies pour enrichir l'offre de voyage
+        </p>
+      </li>
+      <li>
+        <h2>Soutien à la Durabilité :</h2>
+        <p>
+          Contribuer aux efforts de durabilité et répondre aux attentes des
+          clients concernant les pratiques éco-responsables.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
