--- a/GGDemo/src/app/artisan/artisan.component.html
+++ b/GGDemo/src/app/artisan/artisan.component.html
@@ -1,8 +1,51 @@
-<div id="container">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="GGbandeau">
     que peut faire&nbsp;
     <p class="GG">GentleGuest</p>
     &nbsp;pour vous ?
   </div>
+  <div class="pageContent2">
+    <img src="../../assets/sucette/Sucette_Artisan.png" alt="" />
+    <ul>
+      <li>
+        <h2>Augmentation de la Visibilité et Accès au Marché :</h2>
+        <p>
+          Les artisans luttent pour se faire connaître au-delà de leur localité
+          immédiate et atteindre un public plus large intéressé par des produits
+          authentiques et faits à la main.
+        </p>
+      </li>
+      <li>
+        <h2>Valorisation du Travail Artisanal :</h2>
+        <p>
+          Difficulté à communiquer la valeur et l'unicité du travail artisanal,
+          ainsi que l'histoire et la passion derrière chaque création.
+        </p>
+      </li>
+      <li>
+        <h2>Connexion Directe avec les Consommateurs :</h2>
+        <p>
+          Manque de canaux directs pour interagir avec les consommateurs,
+          comprendre leurs préférences, et recevoir des feedbacks.
+        </p>
+      </li>
+      <li>
+        <h2>Promotion d'Événements et d'Ateliers :</h2>
+        <p>
+          Organiser et promouvoir des événements, des expositions, ou des
+          ateliers pour attirer des visiteurs et partager leur passion et leur
+          expertise.
+        </p>
+      </li>
+      <li>
+        <h2>Soutien à la Durabilité :</h2>
+        <p>
+          Mettre en avant leur engagement envers des pratiques durables et
+          éthiques dans la création de leurs produits.
+        </p>
+      </li>
+    </ul>
+  </div>
+  <app-contact-us-bande></app-contact-us-bande>
 </div>
