--- a/GGDemo/src/app/home-component/home-component.component.html
+++ b/GGDemo/src/app/home-component/home-component.component.html
@@ -1,4 +1,4 @@
-<div id="homeContainer">
+<div class="container">
   <app-titre-bandeau></app-titre-bandeau>
   <div class="pageTitle">Imaginons un évènement mondial :</div>
   <div class="pageContent">
