correction secteur d'activité

--- a/GGDemo/src/app/contact-us/contact-us.component.html
+++ b/GGDemo/src/app/contact-us/contact-us.component.html
@@ -86,98 +86,98 @@
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type1', $event)"
+              (change)="updateSelectedTypes('hotel', $event)"
             />
             Hôtel</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('Restaurant', $event)"
             />
             Restaurant</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('café-bar', $event)"
             />
             Café-Bar</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('camping', $event)"
             />
             Camping</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('magasin', $event)"
             />
             Magasin</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('artisan', $event)"
             />
             Artisan</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('Producteur-Eleveur', $event)"
             />
             Producteur-Eleveur</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('Office-de-tourisme', $event)"
             />
             Office de tourisme</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('Agence-de-voyage', $event)"
             />
             Agence de voyages</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('réceptif', $event)"
             />
             Réceptif</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('mairie', $event)"
             />
             Mairie</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('média-presse', $event)"
             />
             Média-Presse</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('club-sportif', $event)"
             />
             Club sportif</label
           >
           <label
             ><input
               type="checkbox"
-              (change)="updateSelectedTypes('type2', $event)"
+              (change)="updateSelectedTypes('transport-de-personnes', $event)"
             />
             Transport de personnes</label
           >
